--- a/Indexmario2.html
+++ b/Indexmario2.html
@@ -7,7 +7,10 @@
   <title>my-first-website</title>
   <LINK href="styles.css" rel="stylesheet" type="text/css">
 </head>
-
+<title>Mi página de ejemplo</title>
+	</head>
+	<body>
+	Aquí va el contenido
 
    
    
